--- a/locales/birch-artifact-grid-item_es.json
+++ b/locales/birch-artifact-grid-item_es.json
@@ -1,5 +1,5 @@
 {
-  "_LRM_PKTAG279": "birch-artifact-grid-item_10_149 - CHANGES-ONLY",
+  "_LRM_PKTAG557": "birch-artifact-grid-item_11_149 - CHANGES-ONLY",
   "add_title": "Agregar título",
   "check_email": "Revisa tu correo electrónico vinculado a tu cuenta FamilySearch para obtener instrucciones.",
   "contributed_by": "Por: {0}",
@@ -7,6 +7,7 @@
   "not_tagged": "Este recuerdo no está etiquetado",
   "processing": "Procesando",
   "processing_fail": "No se pudo procesar. Eliminar y volver a cargar o contacta a Soporte.",
+  "remaining_days_count": "{0} días",
   "restricted": "Restringido",
   "restricted_info": "Este recuerdo ha sido restringido debido al contenido (ver <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Normas y Pautas de carga</a>) y se suprimirá del sitio dentro de 30 días.",
   "screening": "Verificando",
