--- a/locales/fs-artifact-grid-item_en.json
+++ b/locales/fs-artifact-grid-item_en.json
@@ -11,5 +11,6 @@
   "restricted_info": "This Memory has been restricted due to content (see <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Upload Guidelines and Policies</a>) and will be removed from the site within 30 days.",
   "check_email": "Check your email linked to your FamilySearch account for instructions.",
   "upload_failed": "Upload failed. Delete, and upload again.",
-  "remaining_days_count": "{0} days"
+  "remaining_days_count": "{0} days",
+  "associated_audio": "Associated Audio"
 }
