--- a/locales/fs-artifact-grid-item_ja.json
+++ b/locales/fs-artifact-grid-item_ja.json
@@ -1,17 +1,17 @@
 {
-  "_LRM_PKTAG95": "fs-artifact-grid-item_1_104 - CHANGES-ONLY",
+  "not_tagged": "この思い出はタグ付けされていません。",
   "add_title": "タイトルを追加する",
-  "associated_audio": "関連付けられている音声",
-  "check_email": "指示を読むには，ファミリーサーチアカウントにリンクされている電子メールをチェックしてください。",
+  "restricted": "制限付き",
   "contributed_by": "提供者：{0}",
   "contributed_by_link": "提供者：<span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
-  "not_tagged": "この思い出はタグ付けされていません。",
   "processing": "処理中",
   "processing_fail": "処理できませんでした。削除して再度アップロードするか，サポートに連絡してください。",
-  "remaining_days_count": "あと{0}日",
-  "restricted": "制限付き",
-  "restricted_info": "この思い出はコンテンツのために制限されました（<a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">アップロードの指針と方針</a>を参照）。30日以内にサイトから削除されます。",
   "screening": "検査中",
+  "uploading": "アップロード中",
+  "restricted_info": "この思い出はコンテンツのために制限されました（<a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">アップロードの指針と方針</a>を参照）。30日以内にサイトから削除されます。",
+  "check_email": "指示を読むには，ファミリーサーチアカウントにリンクされている電子メールをチェックしてください。",
   "upload_failed": "アップロードできませんでした。削除してからもう一度アップロードしてください。",
-  "uploading": "アップロード中"
+  "remaining_days_count": "あと{0}日",
+  "associated_audio": "関連付けられている音声",
+  "private_memory_tooltip": "この思い出は非公開です。あなただけに表示されます。"
 }
