--- a/locales/fs-artifact-grid-item_pt.json
+++ b/locales/fs-artifact-grid-item_pt.json
@@ -1,17 +1,17 @@
 {
-  "_LRM_PKTAG971": "fs-artifact-grid-item_1_106 - CHANGES-ONLY",
+  "not_tagged": "Esta recordação não está marcada.",
   "add_title": "Acrescentar um Título",
-  "associated_audio": "Áudio vinculado",
-  "check_email": "Verifique o e-mail cadastrado em  sua conta do FamilySearch para obter mais instruções.",
+  "restricted": "Material Restrito",
   "contributed_by": "Por: {0}",
   "contributed_by_link": "Por: <span class='style-scope fs-artifact-grid-item contributor-name' on-tap='_openContactCard'>{0}</span>",
-  "not_tagged": "Esta recordação não está marcada.",
   "processing": "Processando",
   "processing_fail": "Falha no Processamento Remova e reenvie o artefato ou entre em contato com o suporte.",
-  "remaining_days_count": "{0} dias",
-  "restricted": "Material Restrito",
-  "restricted_info": "Esta recordação foi restrita por causa do conteúdo (ver as <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Normas e Diretrizes para o Envio</a>) e será removida em até 30 dias.",
   "screening": "Avaliando",
+  "uploading": "Enviando",
+  "restricted_info": "Esta recordação foi restrita por causa do conteúdo (ver as <a target='blank' href=\"https://www.lds.org/legal/familysearch-upload-guidelines-and-policies\">Normas e Diretrizes para o Envio</a>) e será removida em até 30 dias.",
+  "check_email": "Verifique o e-mail cadastrado em  sua conta do FamilySearch para obter mais instruções.",
   "upload_failed": "Falha no envio. Exclua e reenvie a recordação.",
-  "uploading": "Enviando"
+  "remaining_days_count": "{0} dias",
+  "associated_audio": "Áudio vinculado",
+  "private_memory_tooltip": "Esta recordação é restrita. Só você pode vê-la."
 }
